# 3d_cell_automata

./: Cargo.toml
assets/shaders/: cell.wgsl  instancing.wgsl
src/: camera.rs  grid.rs  main.rs  rendering.rs  rule.rs
