[package]
name = "conway_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.17.1"
bevy_mesh = "0.17.1"
rand = "0.9.2"
bytemuck = { version = "1.14", features = ["derive"] }
bevy_shader = "0.17.1"

[profile.release]
codegen-units = 16

[profile.dev]
incremental = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
